fix: :bug: 構文エラーを修正

--- a/action.yml
+++ b/action.yml
@@ -30,4 +30,4 @@ runs:
         git add -A
         git commit -m "${MESSAGE}"
         git push origin "${BRANCH}"
-        gh pr create --head "${BRANCH --title "${MESSAGE}" --body "${MESSAGE}"
+        gh pr create --head "${BRANCH}" --title "${MESSAGE}" --body "${MESSAGE}"
